Add support for custom install directories